[package]
authors = ["Kostia R <k-bx@k-bx.com>"]
edition = "2018"
readme = "README.md"
name = "blackpill-sdcard"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "1.0.0"
defmt = "0.3.10"
defmt-semihosting = { version = "0.1.0" }
embedded-alloc = "0.6.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
embedded-hal-nb = "1.0.0"
embedded-sdmmc = { version = "0.8.1" }
# embedded-sdmmc = { version = "0.8.1", default-features = false, features = ["defmt-log"] }
nb = "1.1.0"
pcf8563 = "0.1.2"
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f411"] }

[[bin]]
name = "blackpill-sdcard"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[dependencies.arrayvec]
version = "0.7.2"
default-features = false
